# geometric_control

./: .gitignore
controller_msgs/: CMakeLists.txt  package.xml
geometric_control/: CMakeLists.txt
geometric_control/config/: geometric_control.yaml
geometric_control/include/geometric_control/: common.h  control.h  geometric_controller.h  jerk_tracking_control.h  nonlinear_attitude_control.h  nonlinear_geometric_control.h
geometric_control/launch/: geometric_control_launch.py
geometric_control/src/: geometric_controller.cpp  geometric_controller_node.cpp  jerk_tracking_control.cpp  nonlinear_attitude_control.cpp  nonlinear_geometric_control.cpp  target_publisher.py
